--- a/fabric8.yml
+++ b/fabric8.yml
@@ -3,9 +3,11 @@ buildName: "dotnetapp"
 links:
   Git: "http://gogs/gogsadmin/dotnetapp.git"
   Job: "http://192.168.64.3:31412/job/dotnetapp"
+  Test: "http://10.0.0.171:80/kubernetes/pods?namespace=default-testing"
   Production: "http://10.0.0.171:80/kubernetes/pods?namespace=default-production"
   Staging: "http://10.0.0.171:80/kubernetes/pods?namespace=default-staging"
 environments:
+  Test: "default-testing"
   Staging: "default-staging"
   Production: "default-production"
 useLocalFlow: true
